Fixed layout problems in job queue tables

--- a/src/main/webapp/assets/css/chembench.css
+++ b/src/main/webapp/assets/css/chembench.css
@@ -270,6 +270,10 @@ table.tablesorter {
     table-layout: fixed;
 }
 
+#jobs table.tablesorter {
+    table-layout: auto;
+}
+
 th.name {
     width: 30%;
 }
